@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


class PlanController {
 +partialUpdate(): ResponseEntity<PlanView>
}

class PlanService {
 +partialUpdate(idPlan, resource, getVersionFromIfMatchHeader(ifMatchValue),user): Plan
}

class PlanServiceImpl{
 +partialUpdate(idPlan, resource, getVersionFromIfMatchHeader(ifMatchValue),user): Plan
 }

interface PlanRepository <<interface>> {
  +findById(idPlan): Plan
}

class Plan {
    -nMins
    -maxDevices
    -musicCollections
    -musicSuggestions
    -monthlyFee
    -annualFee
    -planState
    -planType
    -planPromote
    -HTMLdescription
    Plan(final String planType, final Integer numMinutes, final Integer maxDevices, final Integer musicCollections,final String musicSuggestions, final Integer monthlyFee, final Integer annualFee,
                        final String htmlDescription)
    applyPatch(desiredVersion, resource.getNumMinutes(), resource.getMaxDevices(), resource.getMusicCollections(), resource.getMusicSuggestions(),
                    resource.getPlanState(), resource.getPlanPromote(), resource.getMonthlyFee(), resource.getAnnualFee(), resource.getHtmlDescription())
}

PlanRepository "1" --> "0..*" Plan:  records
PlanController ..> PlanService
PlanServiceImpl ..> PlanRepository
PlanServiceImpl ..> Plan
PlanService ..> Plan
PlanServiceImpl .up.|> PlanService

@enduml